configmap-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  containers:
    - name: configmap-container
      image: tomcat:7
      ports:
        - containerPort: 8080
          name: "app-server"
