pv-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pv-pod
spec:
  volumes:
    - name: my-pv-storage
      persistentVolumeClaim:
       claimName: my-pv-claim
  containers:
    - name: my-pv-container
      image: tomcat:7
      ports:
        - containerPort: 8080
          name: "app-server"
      volumeMounts:
        - mountPath: "/mnt"
          name: my-pv-storage
