quota-high-priority-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: high-priority
spec: 
  containers:
    - name: high-priority
      image: ubuntu
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10; done"]
      resources:
        requests:
          memory: "5Gi"
          cpu: "500m"
        limits:
          memory: "5Gi"
          cpu: "500m"
  priorityClassName: high
