secret-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
    - name: secret-container
      image: tomcat:7
      ports:
        - containerPort: 8080
          name: "app-server"
