secret-vol-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-vol-pod
spec:
  containers:
    - name: secret-vol-container
      image: tomcat:7
      ports:
        - containerPort: 8080
          name: "app-server"
      volumeMounts:
        - name: password
          mountPath: "/mnt"
          readOnly: true
  volumes:
    - name: password
      secret:
        secretName: my-password
