nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
        service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
        service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "80"
        service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
  labels:
    run: web-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
