ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: ingress.remotex.io
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
